Update dockerfile
Updated dockerfile, replaced log4j2.properties file with a modified one